{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 40,
  "lineage": "24ed9b2a-ab6e-fd0f-77d1-f49cbfe04ce8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa418472887dc293",
            "domain": "vpc",
            "id": "eipalloc-0fa418472887dc293",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-132-40.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.132.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_1"
            },
            "tags_all": {
              "Name": "nat_ip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ba6482b8af882cf",
            "domain": "vpc",
            "id": "eipalloc-05ba6482b8af882cf",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-41-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.41.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_2"
            },
            "tags_all": {
              "Name": "nat_ip_2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:internet-gateway/igw-0e5868e005a58db5c",
            "id": "igw-0e5868e005a58db5c",
            "owner_id": "442222453508",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/application-tier-lb/6e4f742bf74d1474",
            "arn_suffix": "app/application-tier-lb/6e4f742bf74d1474",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-application-tier-lb-811068361.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/application-tier-lb/6e4f742bf74d1474",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-tier-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cd18533d588e7e42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e07ffc467c9dbd2d"
              },
              {
                "subnet_id": "subnet-0f219b1702a702add"
              }
            ],
            "subnets": [
              "subnet-0e07ffc467c9dbd2d",
              "subnet-0f219b1702a702add"
            ],
            "vpc_id": "vpc-03fd94c852d6ed15c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/front-end-lb/30316ccc35f515b0",
            "arn_suffix": "app/front-end-lb/30316ccc35f515b0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-1715589809.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/front-end-lb/30316ccc35f515b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0099f556b1ed01033"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08de186cb0ba779f1"
              },
              {
                "subnet_id": "subnet-0e359dc2e36d1a9fd"
              }
            ],
            "subnets": [
              "subnet-08de186cb0ba779f1",
              "subnet-0e359dc2e36d1a9fd"
            ],
            "vpc_id": "vpc-03fd94c852d6ed15c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/application-tier-lb/6e4f742bf74d1474/7c6c828566095302",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/application-tier-lb-tg/ed56fc819652cff6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/application-tier-lb/6e4f742bf74d1474/7c6c828566095302",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/application-tier-lb/6e4f742bf74d1474",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/front-end-lb/30316ccc35f515b0/acd00a539acd27db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/front-end-lb-tg/5d905d83e0238289",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/front-end-lb/30316ccc35f515b0/acd00a539acd27db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/front-end-lb/30316ccc35f515b0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/application-tier-lb-tg/ed56fc819652cff6",
            "arn_suffix": "targetgroup/application-tier-lb-tg/ed56fc819652cff6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/application-tier-lb-tg/ed56fc819652cff6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "application-tier-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/front-end-lb-tg/5d905d83e0238289",
            "arn_suffix": "targetgroup/front-end-lb-tg/5d905d83e0238289",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/front-end-lb-tg/5d905d83e0238289",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-end-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa418472887dc293",
            "association_id": "eipassoc-0afa3c34efc200f36",
            "connectivity_type": "public",
            "id": "nat-0f2ef3fba91d4aa75",
            "network_interface_id": "eni-05d3ce183ed414d39",
            "private_ip": "10.0.1.76",
            "public_ip": "15.206.132.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e359dc2e36d1a9fd",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Name": "nat_gw_1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ba6482b8af882cf",
            "association_id": "eipassoc-05a7eba3f52c69443",
            "connectivity_type": "public",
            "id": "nat-006ea101122f9cb18",
            "network_interface_id": "eni-03bd9fff736fdbfab",
            "private_ip": "10.0.2.147",
            "public_ip": "52.66.41.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08de186cb0ba779f1",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Name": "nat_gw_2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:route-table/rtb-0d50e5c3b1dbb143c",
            "id": "rtb-0d50e5c3b1dbb143c",
            "owner_id": "442222453508",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f2ef3fba91d4aa75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:route-table/rtb-0e2d297fa312ebf27",
            "id": "rtb-0e2d297fa312ebf27",
            "owner_id": "442222453508",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006ea101122f9cb18",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:route-table/rtb-0b2281933f7b1e9e4",
            "id": "rtb-0b2281933f7b1e9e4",
            "owner_id": "442222453508",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5868e005a58db5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2e8c0bf0933e48",
            "route_table_id": "rtb-0d50e5c3b1dbb143c",
            "subnet_id": "subnet-0f219b1702a702add"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0655e87b5b93fc3fa",
            "route_table_id": "rtb-0e2d297fa312ebf27",
            "subnet_id": "subnet-0e07ffc467c9dbd2d"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba95bfc6c5985e8",
            "route_table_id": "rtb-0b2281933f7b1e9e4",
            "subnet_id": "subnet-0e359dc2e36d1a9fd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eb8bff63a9c0cd9",
            "route_table_id": "rtb-0b2281933f7b1e9e4",
            "subnet_id": "subnet-08de186cb0ba779f1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-0cd18533d588e7e42",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd18533d588e7e42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9ffd3f0c4e1cc20"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9ffd3f0c4e1cc20"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_alb_application_tier",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_application_tier_sg"
            },
            "tags_all": {
              "Name": "alb_application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-0099f556b1ed01033",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0099f556b1ed01033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_alb_presentation_tier",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_presentation_tier_sg"
            },
            "tags_all": {
              "Name": "alb_presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-0be302aca0bea56fe",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be302aca0bea56fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd18533d588e7e42"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd18533d588e7e42"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_application_tier",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application_tier_sg"
            },
            "tags_all": {
              "Name": "application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-0e9ffd3f0c4e1cc20",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9ffd3f0c4e1cc20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0099f556b1ed01033"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0099f556b1ed01033"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_presentation_tier",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "presentation_tier_sg"
            },
            "tags_all": {
              "Name": "presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0f219b1702a702add",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f219b1702a702add",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0e07ffc467c9dbd2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e07ffc467c9dbd2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0e359dc2e36d1a9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e359dc2e36d1a9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-08de186cb0ba779f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de186cb0ba779f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:vpc/vpc-03fd94c852d6ed15c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db8a90e6ed7b88b9",
            "default_route_table_id": "rtb-0d99024db1b60a54f",
            "default_security_group_id": "sg-0067bcd98dfd0f76e",
            "dhcp_options_id": "dopt-070d8654d588070a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fd94c852d6ed15c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d99024db1b60a54f",
            "owner_id": "442222453508",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-0df5a9201056ee361",
            "description": "Allows application tier to access the RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df5a9201056ee361",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EC2 to MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be302aca0bea56fe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSG",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fd94c852d6ed15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.application_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}